Telemetry/kube-pr/web-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ${NAMESPACE}
  name: kakey-blazor-ingress
  annotations:
    cert-manager.io/cluster-issuer: cert-manager-webhook-duckdns-kakey-1-production
spec:
  tls:
  - hosts:
    - kakeysbakery.duckdns.org
    secretName: kakeysbakery-1-kube-tls-production
  ingressClassName: nginx
  rules:
  - host: ${PULL_REQUEST_ID}.kakeysbakery.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kakey-blazor-service
            port:
              number: 8080
